tests/compile_fail/remote_on_enum.rs
#[disponent::remote(SomeTrait)]
enum NotATrait {}

fn main() {}
